finished my masterpiece

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </a>
         </li>
         <li ind="linkedin">
-          <a href="https://www.linkedin.com/in/dorian-guitel/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             <i class="fab fa-linkedin-in">
             </i>
           </a>
